creation of styleIndex and addition of new divs

--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,21 @@
 
 <body>
         <header>
-            <ul></ul> <!--What is LenStop-->
-            <ul></ul> <!--Pricing-->
-            <ul></ul> <!--FAQs-->
-            <ul></ul> <!--Login-->
-            <ul></ul> <!--Join Us-->
+            <ul>About LenStop</ul> <!--What is LenStop-->
+            <ul>Pricing</ul> <!--Pricing-->
+            <ul>FAQs</ul> <!--FAQs-->
+            <ul>Login</ul> <!--Login-->
+            <ul>Join Us</ul> <!--Join Us-->
         </header>
+
+        <div class="hero">
+            <div class="text">
+                <h1>Find amazing deals on camera equipment for all levels of expertise</h1>
+            </div> <!--Text div-->
+            <div class="image">
+
+            </div> <!--image div-->
+
+        </div> <!--Hero div-->
 </body>
 </html>
