Updated styleIndex.css and index.html

--- a/html/index.html
+++ b/html/index.html
@@ -4,26 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styleIndex.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <title>LenStop</title>
 </head>
 
 <body>
         <header>
-            <ul>About LenStop</ul> <!--What is LenStop-->
-            <ul>Pricing</ul> <!--Pricing-->
-            <ul>FAQs</ul> <!--FAQs-->
-            <ul>Login</ul> <!--Login-->
-            <ul>Join Us</ul> <!--Join Us-->
+            <div class="logo">
+                <!--Insert logo here-->
+            </div> <!--logo div-->
+            <div class="nav">
+                <ul>About LenStop</ul> <!--What is LenStop-->
+                <ul>Pricing</ul> <!--Pricing-->
+                <ul>FAQs</ul> <!--FAQs-->
+                <ul><a href="#">Login</a></ul> <!--Login-->
+                <ul><a href="#">Join Us</a></ul> <!--Join Us-->
+            </div> <!--nav div-->
         </header>
 
         <div class="hero">
             <div class="text">
                 <h1>Find amazing deals on camera equipment for all levels of expertise</h1>
+                <button><a href="#">Join Now</a></button>
             </div> <!--Text div-->
             <div class="image">
-
+                <!--Add slideshow of cameras, lenses, and bags-->
             </div> <!--image div-->
 
         </div> <!--Hero div-->
+
+        <div class="reviews">
+            <div class="review_one">
+                
+            </div> <!--review_one div-->
+            <div class="review_two">
+
+            </div> <!--review_two div-->
+            <div class="review_three">
+
+            </div> <!--review_three div-->
+        </div> <!--reviews div-->
 </body>
 </html>
