Updates to nav bar

--- a/html/index.html
+++ b/html/index.html
@@ -13,15 +13,22 @@
 
 <body>
         <header>
-            <div class="logo">
-                <!--Insert logo here-->
-            </div> <!--logo div-->
             <div class="nav">
-                <ul>About LenStop</ul> <!--What is LenStop-->
-                <ul>Pricing</ul> <!--Pricing-->
-                <ul>FAQs</ul> <!--FAQs-->
-                <ul><a href="#">Login</a></ul> <!--Login-->
-                <ul><a href="#">Join Us</a></ul> <!--Join Us-->
+                <div class="logo">
+                    <!--Insert logo here-->
+                </div> <!--logo div-->
+                
+                <div class="links_left_side">
+                    <ul><a href="#">About</a></ul> <!--What is LenStop-->
+                    <ul><a href="#">Pricing</a></ul> <!--Pricing-->
+                    <ul><a href="#">FAQs</a></ul> <!--FAQs-->
+                </div> <!--links_left_side div-->
+
+                <div class="links_right_side">
+                    <ul><a href="#">Login</a></ul> <!--Login-->
+                    <ul><a href="#">Join Us</a></ul> <!--Join Us-->
+                </div> <!--links_right_side div-->
+
             </div> <!--nav div-->
         </header>
 
